fix image stretch on chrome

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,6 +10,9 @@
     width: 100%;
 }
 
+.home_img {
+    align-self: center;
+}
 @media screen and (min-width: 630px) {
     .home {
         justify-content: space-around;
